tests/ui/solver-attribute/no-arg/expected
error: the `#[kani::solver]` attribute expects a single argument. Got 0 arguments.\
test.rs:\
  |\
5 | #[kani::solver]\
  | ^^^^^^^^^^^^^^^
error: aborting due to previous error
